# maincraft

./: CMakeLists.txt  README.md  build.bat  clean.bat  run.bat  tsgen.bat
lib/FastNoiseLite/include/: FastNoiseLite.h
lib/FastNoiseLite/src/: FastNoiseLite.c
lib/glad-4.0-core/include/glad/: glad.h
lib/glad-4.0-core/src/: glad.c
res/shaders/: crosshair.frag  crosshair.vert  frag.glsl  text.frag  vertex.glsl
src/: block.c  camera.c  config.h  file.c  main.c  math.c  mc.h  program.c  tex.c  text.c  world.c
